# histogram_of_words_client

./: CMakeLists.txt  README.md  main.c  makefile  semple_file.txt  semple_file_short.txt
file_scanner/: file_scaner.c  file_scaner.h
file_utils/: file_utils.c  file_utils.h
net_utils/: net_utils.c  net_utils.h
prefix_tree/: prefix_tree.c  prefix_tree.h
